<resources>
    <string name="app_name">Portfolio</string>

    <string name="app_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="open_app">This button will launch my</string>
    <string name="title_build_it_bigger">Build it Bigger</string>
    <string name="title_capstone">Capstone: My Own App</string>
    <string name="title_library">Library App</string>
    <string name="title_scores">Scores App</string>
    <string name="title_spotify">Spotify Streamer</string>
    <string name="title_xyz_reader">XYZ Reader</string>
</resources>
