<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/txtTitle"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_spotify"
        android:id="@+id/btnSpotify"
        android:layout_below="@+id/txtTitle"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_scores"
        android:id="@+id/btnScores"
        android:layout_below="@+id/btnSpotify"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_library"
        android:id="@+id/btnLibrary"
        android:layout_below="@+id/btnScores"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_build_it_bigger"
        android:id="@+id/btnBuildItBigger"
        android:layout_below="@+id/btnLibrary"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_xyz_reader"
        android:id="@+id/btnXYZReader"
        android:layout_below="@+id/btnBuildItBigger"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:onClick="displayToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_capstone"
        android:id="@+id/btnCapstone"
        android:layout_below="@+id/btnXYZReader"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:background="#e91e63"
        android:textColor="#FFFFFF"
        android:onClick="displayToast" />

</RelativeLayout>
